mule-user-guide/v/3.2/unit-testing.adoc
= 单元测试

Mule ESB提供了单元测试的测试兼容性套件（TCK），您可以使用它来测试简单扩展以及自定义模块和传输。单元测试位于`-tests.jar`文件中，如Mule 3.0.0版的`mule-core-3.0.0-tests.jar`。所有的单元测试都继承自org.mule.tck.AbstractMuleTestCase。

这些单元测试是有益的，原因如下：

* 使用TCK测试用例测试的组件确保组件的常见行为与Mule框架兼容。
* 使用TCK测试用例，开发人员可以专注于编写组件特定行为的测试。
* 如果服务组件API中的方法测试无法通过TCK测试用例进行测试，则测试用例会为测试提供抽象方法，确保开发人员测试组件的所有区域。
*  TCK提供了一个默认测试模型，它是一组简单的测试类。开发人员无需担心每次都为他们的测试用例编写新的测试类。
*  TCK中的抽象测试用例使用JUnit的`TestCase`，因此它们与其他测试用例兼容。

以下是对Mule TCK的一些单元测试的描述：

[%header%autowidth.spread]
|===
|测试组件 |描述
| `AbstractMuleTestCase`  |帮助程序测试用例，提供创建测试和模拟对象类型的方法。这是所有其他抽象TCK类的基类。
| `AbstractConnectorTestCase`  |用于测试连接器的常见行为。这测试使用模拟对象分派和发送事件。
| `AbstractMuleMessageFactoryTestCase`  |为`MuleMessageFactory`界面中定义的所有标准方法提供测试。添加特定的测试，将您的传输消息转换为子类中的MuleMessage。
| `AbstractMessageReceiverTestCase`  |用于测试`MessageReceiver`的常见行为。这测试使用模拟对象接收消息。
| `AbstractComponentTestCase`  |这是测试自定义组件实现的单元测试的基类。该基类的具体子类包括`DefaultJavaComponentTestCase`，`PooledJavaComponentTestCase`和`SimpleCallableJavaComponentTestCase`，每个子类都包含用于测试该组件类型的方法。例如，`DefaultJavaComponentTestCase`包含用于测试基本Java组件的创建，生命周期和处置的方法。
| `AbstractTransformerTestCase`  |用于测试变形金刚。这个类定义了许多测试，确保变压器在单个场景以及往返场景中工作。这个抽象类有很多具体的子类来测试特定类型的变换器，例如`StringByteArrayTransformersTestCase`。
| `DefaultMuleContextTestCase`  |测试Mule上下文的创建和处置。
| `AbstractServiceTestCase`  |一个抽象测试用例，提供测试服务启动，停止，暂停，恢复和处置的方法。
|===
